--- a/index.html
+++ b/index.html
@@ -4,46 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header> <!--Menu w Figmie - Główny nagłówek z linkami. WebStudio jest w liście?--> 
-        <Span> 
-            <a href="#">WebStudio</a>
+        <Span > 
+            <a class="brand-logo" href="./index.html"><span class="first-half-webstudio">Web</span><span class="second-half-webstudio">Studio</span></a>
         </Span>
         <nav>
-            <ul>
-                <li><a href="#">Agencja</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Kontakt</a></li> 
+            <ul class="link">
+                <li><a class="link-style" href="#">Agencja</a></li>
+                <li><a class="link-style" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link-style" href="#">Kontakt</a></li> 
             </ul> 
         </nav>  
-         <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
-         <a href="tel:+48111111111">+48 111 111 111</a>
+         <a class="link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+         <a class="link-contact" href="tel:+48111111111">+48 111 111 111</a>
     </header> 
     <main> 
         <!--Szara sekcja z przyciskiem-->  
-             <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1> 
-             <button type="button">Zamów usługe</button> 
+             <h1 class="large-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1> 
+             <button class="bth1" type="button">Zamów usługe</button> 
         <!--Nasze atuty--> 
-            <ul>
+            <ul class="list-text">
                 <li> 
-                    <h3>LOREM IPSUm</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
+                    <h3 class="list-text1">LOREM IPSUm</h3>
+                    <p class="list-text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
                 <li> 
-                    <h3>LOREM IPSUm</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
+                    <h3 class="list-text1">LOREM IPSUm</h3>
+                    <p class="list-text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
                 <li> 
-                    <h3>LOREM IPSUm</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
+                    <h3 class="list-text1">LOREM IPSUm</h3>
+                    <p class="list-text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
                 <li> 
-                    <h3>LOREM IPSUm</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
+                    <h3 class="list-text1">LOREM IPSUm</h3>
+                    <p class="list-text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada<p>
                 </li>
             </ul>
         <!--Czym się zajmujemy  bloki ze zdjęciami-->
-            <h2>Czym się zajmujemy</h2>
-            <ul> 
+            <h2 class="expert">Czym się zajmujemy</h2>
+            <ul class="list-expert"> 
                 <li> 
                     <img  
                         src="images/images1/box1.jpg"  
@@ -70,8 +74,8 @@
                 <li>
             </ul>
         <!--Nasz zespół jest listą?-->
-            <h2>Nasz zespół</h2>
-            <ul>   
+            <h2 class="team">Nasz zespół</h2>
+            <ul class="list-team">   
                 <li> 
                     <img  
                         src="images/images2/img1.jpg"  
@@ -79,8 +83,8 @@
                         width="270"  
                         height="260" 
                     />  
-                    <h3>John Doe</h3>
-                    <p>Product Designer</p> 
+                    <h3 class="team-name">John Doe</h3>
+                    <p class="team-expert">Product Designer</p> 
                 <li>  
                     <img  
                         src="images/images2/img2.jpg"  
@@ -88,8 +92,8 @@
                         width="270"  
                         height="260" 
                     />
-                    <h3>John Doe</h3>
-                    <p>Frontend Developer</p> 
+                    <h3 class="team-name">John Doe</h3>
+                    <p class="team-expert">Frontend Developer</p> 
                 <li> 
                     <img  
                         src="images/images2/img3.jpg"  
@@ -97,8 +101,8 @@
                         width="270"  
                         height="260" 
                     />
-                    <h3>John Doe</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-name">John Doe</h3>
+                    <p class="team-expert">Marketing</p>
                 <li>
                     <img  
                         src="images/images2/img4.jpg"  
@@ -106,19 +110,19 @@
                         width="270"  
                         height="260" 
                     />
-                    <h3>John Doe</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">John Doe</h3>
+                    <p class="team-expert">UI Designer</p>
                 </li>
             </ul>
     </main> 
     <footer>  
-        <div> 
-            <a href="#">WebStudio</a>  
+        <div class="background-foot"> 
+            <a class="brand-logo" href="./index.html"><span class="first-half-webstudio">Web</span><span class="second-half-webstudio2">Studio</span></a>
             <address> 
-                <ul>
-                    <li><a href="https://goo.gl/maps/7ZxhDKWCxvy8bxdD8"> m. Warszawa, Aleje Jerozolimskie 21</a></li>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+                <ul class="list-adress">
+                    <li><a class="adress-footer1" href="https://goo.gl/maps/7ZxhDKWCxvy8bxdD8"> m. Warszawa, Aleje Jerozolimskie 21</a></li>
+                    <li><a class="adress-footer1" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="adress-footer1" href="tel:+48111111111">+48 111 111 111</a></li>
                 </ul> 
             </address>
         </div>
