--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <li><a class="adress-footer1" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="adress-footer1" href="tel:+48111111111">+48 111 111 111</a></li>
                 </ul> 
-            </address>
+            </address>te
         </div>
     </footer>
 </body>
